# ChangeLog for app-office/lyx
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.49 2004/10/13 13:47:48 usata Exp $

  13 Oct 2004; Mamoru KOMACHI <usata@gentoo.org>
  +files/lyx-1.3.5-boost.patch, lyx-1.3.5.ebuild:
  Added a patch to fix compile problem with gcc 3.4.2. Thanks to Ed Catmur
  <ed@catmur.co.uk>, closing bug #67131.

*lyx-1.3.5 (10 Oct 2004)

  10 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> +lyx-1.3.5.ebuild:
  Version bumped; bug #66922.

  09 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> +files/lyx-1.3.4-gcc34.patch,
  lyx-1.3.4.ebuild:
  Applied a patch to make lyx compile on gcc 3.4; bug #62126.

  18 Jun 2004; Jason Wever <weeve@gentoo.org> lyx-1.3.4.ebuild:
  Stable on sparc.

  01 Jun 2004; Aron Griffis <agriffis@gentoo.org> lyx-1.3.4.ebuild:
  Fix use invocation

  11 May 2004; Mamoru KOMACHI <usata@gentoo.org> lyx-1.3.2-r1.ebuild,
  lyx-1.3.4.ebuild, files/lyx-1.3.2-configure.diff:
  Fixed several bugs. See bug #50703. Removed previous version.

  08 May 2004; Mamoru KOMACHI <usata@gentoo.org> lyx-1.2.1.ebuild,
  lyx-1.3.2-r1.ebuild, lyx-1.3.4.ebuild:
  Stable on x86 and ppc. Removed old ebuild.

*lyx-1.3.4 (22 Feb 2004)

  22 Feb 2004; Mamoru KOMACHI <usata@gentoo.org> lyx-1.3.4.ebuild:
  Version bumped.  Added a notice for people who have a multi-head setup
  but choose xforms instead of qt interface. This closes bug #43092


  09 Feb 2004; Dylan Carlson <absinthe@gentoo.org> lyx-1.3.3.ebuild:
  added amd64 keyword.

  31 Dec 2003; Mike Gardiner <obz@gentoo.org> lyx-1.3.2-r1.ebuild,
  lyx-1.3.2.ebuild, lyx-1.3.3.ebuild:
  Removed ~alpha from 1.3.x, seems the keyword was carried over from the 1.2.x
  series, but xforms isn't marked on alpha

  09 Dec 2003; Heinrich Wendel <lanius@gentoo.org> lyx-1.2.1.ebuild,
  lyx-1.3.2-r1.ebuild, lyx-1.3.2.ebuild, lyx-1.3.3.ebuild:
  changed app-text/ghostscript to virtual/ghostscript
