@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/lyx-1.3.5.ebuild,v 1.2 2004/10/13 13:47:48 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/lyx-1.3.5.ebuild,v 1.3 2004/10/22 02:29:16 usata Exp $
 
 inherit kde-functions eutils libtool
 
@@ -72,6 +72,7 @@ src_compile() {
 		${myconf} \
 		--enable-optimization="$flags" \
 		|| die
+	# bug 57479
 	emake || die "emake failed"
 
 }
